<resources>
    <string name="app_name">GymApp</string>
    <string name="action_settings">Settings</string>

    <string name="signUpEditNameHint">Name</string>
    <!--    <string name="signUpTrainingLevelLabel">Training level</string>-->
    <!--    <string name="signUpGoalLabel">Goal</string>-->

    <string name="nextStepButton">Next</string>
    <string name="signInUsernameHint">Username</string>
    <string name="signInPasswordHint">Password</string>
    <string name="signInForgotPassLabel">Forgot Password</string>
    <string name="signInButton">Sign in</string>
    <string name="signUpButton">Sign up</string>
    <string name="signUpStepAboutLabel">About You</string>
    <string name="signUpAgeHint">Please enter your date of birth</string>
    <!--    <string name="signUpHeightHint">Height (cm)</string>-->
    <!--    <string name="signUpWeightHint">Weight (kg)</string>-->
    <string name="signUpSexHint">Sex</string>

    <string name="playExerciseImageHint">Exercise image</string>
    <string name="instructionsPanelHeaderText">Instructions</string>
    <string name="prevExerciseButtonHint">Previous exercise</string>
    <string name="nextExerciseButtonHint">Next exercise</string>
    <string name="playExerciseButtonHint">Start</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_help">Help</string>
    <string name="menu_rate_us">Rate us</string>
    <string name="menu_sign_out">Sign out</string>

    <string name="email">Email</string>
    <string name="name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="see_more_routines">See More</string>
    <string name="fav_routines_title">Favourites</string>
    <string name="home_title_routine">All Routines</string>
    <string name="see_fav_routines_button">See Favs</string>
    <string name="favourites_sort_by">Order by</string>

    <string name="exerciseDetailsCrossedAbs">Crossed Abs</string>
    <string name="exerciseDetailsWorkingMuscles">Working muscles</string>
    <string name="exerciseDetailsEquipment">Equipment</string>
    <string name="exerciseDetailsMat">Gymnastic Mat</string>
    <string name="exerciseDetailsInstructions">Instructions</string>
    <string name="exerciseDetailsStep1">1) Lay down on your back, with knees blended and the palm of the feet on the ground. Blend the arms, hands behind the neck.</string>
    <string name="exerciseDetailsStep2">2) Do a push-up, taking the left elbow towards the right knee, always going up. Switch sides.</string>
    <string name="exerciseDetailsStep3">3) When finished, tap softly your stomach.</string>
    <string name="routineWarmUpListRopeJump">Rope jump</string>
    <string name="routineWarmUpListBurpees">Burpees</string>

    <string name="routineWarmUpListBreak">Break</string>
    <string name="helpAboutUs">About Us</string>
    <string name="helpAboutUsInfo">We are students at ITBA and we developed the GymApp as a project for an assignment.</string>
    <string name="helpContactUsInfo">In case of any issue, comment or feedback you want to share with us, please make sure to contact us through or mail contact@gymapp.com\n In case you want to join our team, please contact us to recruitment@gymapp.com</string>
    <string name="helpContactUs">Contact Us</string>
    <string name="helpFAQ">FAQ</string>
    <string name="helpQ1">How can I add a routine to my favourites?</string>
    <string name="helpA1">Use the button that has a heart shape. You can find it on the routine you want to add to this list.</string>
    <string name="helpQ2">How can I change my personal data?</string>
    <string name="helpA2">Go to profile and use the pencil shaped button to edit your information.</string>

    <string name="activityAddFavouriteButton">Add to favourites</string>
    <string name="allRoutinesTitle">All routines</string>
    <string name="favRoutinesTitle">Favourite routines</string>
    <string name="secondsFormat">%.0fs</string>
    <string name="rateFormat">★ %.2f</string>
    <string name="rateFormatInt">★ %d</string>
    <string name="signUpPasswordHint">Password</string>
    <string name="signUpUsernameHint">Username</string>
    <string name="signUpEmailHint">Email</string>
    <string name="signUpPhoneHint">Cel Number</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="VerificationCodeHint">Verification Code</string>
    <string name="VerificationCodeHelper">Please insert the code you received via email below</string>
    <string name="profileBottonEdit">Edit</string>

    <string name="routineInfoWarmUp">Warm Up</string>
    <string name="routineInfoMainTraining">Main Training</string>
    <string name="routineInfoCoolDown">Cool Down</string>

    <string name="favourite_routines_chip">Favourites</string>
    <string name="save">Save</string>
    <string name="play_routine_button">Play Routine</string>

    <string name="exerciseimage">Exercise Image</string>
    <string name="routine_detail_cycles_header">Cycles</string>
    <string name="all_routines_chip">All</string>
    <string name="wrong_username_password">Ups! Wrong username or password</string>
    <string name="unexpected_error">Ups! Something went wrong</string>
    <string name="VerificationEmailHelper">Please provide your email</string>
    <string name="ejs_reamining">Only %d Exercises Remaining</string>
    <string name="repetitions_remaining">%d Repetitions Remaining</string>

    <string name="routine_filter_dialog_help">Choose a filter</string>
    <string name="cancel_button">Cancel</string>
    <string name="navDrawerDarkMode">DarkMode</string>
    <string name="unavailable_categories">Ups! Couldn\'t fetch categories</string>
    <string name="review_description_hint">Write a review</string>
    <string name="routine_detail_reviews_header">Reviews</string>

    <string name="PlaceHolderTimer">--:--</string>
    <string name="username">Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="add_filter">+ Add Filter</string>
    <string name="password">Password</string>

    <string name="email_fail">Invalid email</string>
    <string name="username_fail">Invalid username</string>
    <string name="Password_fail">Password must be at least 8 characters long</string>
    <string name="name_fail">Invalid Name</string>
    <string name="phone_fail">Invalid Phone number</string>
    <string name="general_error">"Ups! Something went wrong"</string>
    <string name="email_sent">Email has been sent!</string>

    <string name="Code_fail">Invalid Code</string>


    <string name="routine_rate_dialog_title">Rate the routine</string>
    <string name="skip_review_button">Skip</string>
    <string name="send_review_button">Submit</string>
    <string name="success_message">Done!</string>

    <string name="edit_profile_title">Edit Profile</string>

    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="darkmodedescription">Change application into Dark Theme</string>

    <string name="open_routine_intent_label">Open routine</string>

</resources>
