<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stepAboutLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/signUpStepAboutLabel"
            android:textColor="@color/textColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/Username_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:hint="@string/signUpUsernameHint"
            android:inputType="text" />

        <EditText
            android:id="@+id/Email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"
            android:hint="@string/signUpEmailHint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:hint="@string/signUpPasswordHint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorAccent"
            android:text="@string/nextStepButton" />

    </LinearLayout>
</LinearLayout>